# marka_ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CICD_SUMMARY.md  CLAUDE.md  DEPLOYMENT.md  GEMINI.md  MARKA_AI_Sprint_Task_Breakdown.xlsx  MARKA_AI_Technical_Document.docx  MARKA_AI_Technical_Document.md  README.md  deploy.sh  docker-compose.yml  feature_log.md  mkdocs.yml  plan.md  pyproject.toml  skills-lock.json  zensical.toml
.github/workflows/: ci-cd.yml
.opencode/context/project-intelligence/: living-notes.md  technical-domain.md
.superpowers/brainstorm/: latest-session-dir
ai/: .dockerignore  .env.example  Dockerfile  FIX_SUMMARY.md  STRUCTURE.md  pyproject.toml
ai/app/: config.py  main.py  test.py
ai/app/agents/: __init__.py  orchestrator.py
ai/app/agents/content/: agent.py
ai/app/agents/orchestrator/: __init__.py  agent.py
ai/app/agents/orchestrator/.adk/: session.db
ai/app/api/v1/middleware/: auth.py
ai/app/core/: __init__.py
ai/app/llm/: __init__.py  test_llm.py
ai/app/models/: enums.py
ai/app/rag/: __init__.py
ai/app/schemas/: __init__.py  content.py  orchestrator.py
ai/app/services/: __init__.py  llm_service.py  test_service.py
ai/app/tools/: __init__.py  echo.py
ai/tests/: conftest.py  test_adk_integration.py  test_config.py  test_main.py
ai/tests/integration/: test_adk_integration.py  test_content_agent.py  test_llm_service.py  test_orchestrator_agent.py
ai/tests/unit/: test_content_schema.py  test_main.py  test_orchestrator_schema.py
backend/: .env.example  init.sql  package-lock.json  package.json  tsconfig.json
backend/src/: index.ts
backend/src/__tests__/: api.test.js
backend/src/middleware/: auth.ts
backend/src/services/: aiService.ts
bot/: Dockerfile
docker/ai/: Dockerfile
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docs/: agents.md  index.md  integration-testing.md
docs/architecture/: adk-llm-service.md  orchestrator-agent.md  overview.md
docs/getting-started/: quick-start.md
docs/reference/: environment-vars.md
frontend/: .env.example  package.json
scripts/: generate_api_docs.py  serve_docs.py  start-adk-web.ps1  watch_docs.py
site/: 404.html  index.html  objects.inv  search.json  sitemap.xml
site/agents/: index.html
tests/: test_environment.py
web/: Dockerfile
(+52 files in other folders)
