[project]
name = "marka-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "litellm[proxy]>=1.82.6",
    "pydantic>=2.12.5",
    "python-telegram-bot>=22.7",
]

[dependency-groups]
dev = [
    "docx2txt>=0.9",
    "mypy>=1.19.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "python-docx>=1.2.0",
    "ruff>=0.15.7",
    "tabulate>=0.10.0",
]
