[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = "."
